# programming

./: .gitignore
socket_game/: CMakeLists.txt  Makefile  game_server.db  logs.txt  main.cpp  server.cpp
socket_game/src/: main.cpp
week1/: build.sh
week1/task_1/src/: task1.cpp
week1/task_2/src/: task2.cpp
week11/A/: CMakeLists.txt  Makefile
week11/A/include/: entropy.h  memory.h  random_file.h
week11/A/src/: entropy.cpp  main.cpp  memory.cpp  random_file.cpp
week11/B/: CMakeLists.txt  Makefile
week11/B/include/: function.h  trapezoid.h
week11/B/src/: function.cpp  main.cpp  trapezoid.cpp
week12/A/: config.cfg
week12/B/include/: password_cracker.hpp
week12/B/src/: main.cpp  password_cracker.cpp
week13/: Dockerfile
week13/A/: CMakeLists.txt  Makefile
week13/A/include/: prime_calculator.hpp
week15-16/: CMakeLists.txt  Makefile  comp.sh  run.sh
week15-16/client/: CMakeLists.txt  Makefile
week15-16/client/src/: client.cpp
week15-16/server/: CMakeLists.txt  Makefile
week15-16/server/src/: server.cpp
week2/task1/task1.1/: Makefile
week2/task1/task1.1/include/: people.hpp
week2/task1/task1.1/src/: main.cpp  people.cpp
week2/task1/task1.2/: Makefile
week2/task1/task1.2/include/: Octagon.hpp
week2/task1/task1.2/src/: main.cpp
week2/task2/task2.1/: Makefile
week2/task2/task2.1/include/: Student.hpp
week2/task2/task2.1/src/: Student.cpp  main.cpp
week2/task2/task2.2/: Makefile
week2/task2/task2.2/include/: Bank.hpp
week2/task2/task2.2/src/: Bank.cpp  main.cpp
week2/task3/task3_1/: Makefile
week2/task3/task3_1/include/: Author.hpp  Book.hpp
week2/task3/task3_1/src/: Author.cpp  Book.cpp  main.cpp
week2/task3/task3_2/include/: Car.hpp  Engine.hpp  Passenger.hpp
week2/task3/task3_2/src/: main.cpp
week3/task1/A/include/: printAge.hpp
week3/task1/A/src/: main.cpp
week3/task1/B/: Makefile
week3/task1/B/include/: days_in_month.hpp
week3/task1/B/src/: main.cpp
week3/task2/A/include/: pyramid.hpp
week3/task2/A/src/: main.cpp
week3/task2/B/include/: heron_sqrt.hpp
week3/task2/B/src/: main.cpp
week3/task3/A/: Makefile
week3/task3/A/include/: max_element.hpp
week3/task3/A/src/: main.cpp
week3/task3/B/: Makefile
week3/task3/B/include/: mergeSort.hpp
week3/task3/B/src/: main.cpp  mergeSort.cpp
week4/task1/A/include/: search.hpp
week4/task1/A/src/: main.cpp  search.cpp
week4/task1/B/include/: entropy.hpp
week4/task1/B/src/: entropy.cpp  main.cpp
week4/task2/A/include/: email_validator.hpp
week4/task2/A/src/: email_validator.cpp  main.cpp
week4/task2/B/include/: ipv6_checker.hpp
week4/task2/B/src/: ipv6_checker.cpp  main.cpp
week4/task3/A/include/: calculate.hpp
week4/task3/A/src/: calculate.cpp  main.cpp
week5/task1/A/include/: calculations.hpp
week5/task1/A/src/: calculations.cpp  main.cpp  text.txt
week5/task1/B/include/: entropy_calculator.hpp
week5/task1/B/src/: data.txt  main.cpp
week5/task1/C/: Makefile  run.sh
week5/task1/C/src/: entropy_calculator.cpp  huge_file.txt  main.cpp
week5/task2/A/include/: typeConverter.hpp
week5/task2/A/src/: main.cpp  typeConverter.cpp
week5/task3/A/include/: calculate.hpp
week5/task3/A/src/: calculate.cpp
week5/task3/B/include/: calculate.hpp
week5/task3/B/src/: calculate.cpp  main.cpp
week5/task3/C/include/: calculate.hpp
week5/task3/C/src/: calculate.cpp  main.cpp
week6/task1/A/include/: permutations.hpp
week6/task1/B/include/: max_profit.hpp
week6/task1/C/include/: max_container.hpp
week6/task1/C/src/: main.cpp  max_container.cpp
week6/task2/B/src/: main.cpp
week6/task3/A/include/: duplicate_remover.hpp
week6/task3/A/src/: duplicate_remover.cpp
week7/task1/include/: frequency.hpp
week7/task1/src/: frequency.cpp  main.cpp
week7/task2/include/: customer.h  date.h  order.h  product.h
week7/task2/src/: date.cpp  main.cpp  order.cpp  product.cpp
week7/task3/include/: search.hpp
week7/task3/src/: main.cpp  search.cpp
