cmake_minimum_required(VERSION 3.10)
project(EntropyCalculator)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
add_executable(main src/main.cpp src/entropy.cpp src/memory.cpp src/random_file.cpp)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(main Threads::Threads)
